<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kicklance.fursaty.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.kicklance.fursaty.ui.bookmark.BookmarkFragment"
        android:label="@string/nav_bookmark" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kicklance.fursaty.ui.setting.SettingFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kicklance.fursaty.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>