<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/take_action"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/action_call"
        style="@style/SettingItemStyle"
        android:text="@string/action_call"
        app:drawableStartCompat="@drawable/ic_action_call" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/action_sms"
        style="@style/SettingItemStyle"
        android:text="@string/action_sms"
        app:drawableStartCompat="@drawable/ic_action_sms" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/action_whatsapp"
        style="@style/SettingItemStyle"
        android:text="@string/action_whatsapp"
        app:drawableStartCompat="@drawable/ic_action_whatsapp" />

</LinearLayout>