<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/language_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Arabic Option -->
    <LinearLayout
        android:id="@+id/option_arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_flag_ar" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/language_ar"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/check_arabic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_check"
            android:visibility="gone" />
    </LinearLayout>

    <!-- English Option -->
    <LinearLayout
        android:id="@+id/option_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_flag_en" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/language_en"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/check_english"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_check"
            android:textAlignment="viewStart"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>