<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.company_detail.CompanyDetailsActivity">

    <include
        android:id="@+id/_toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/company_cover"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/company_cover_placeholder" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/company_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/company_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_cover"
                app:srcCompat="@drawable/ic_business_man" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_image"
                tools:text="PURE for IT Solutions" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_name"
                tools:text="(1012416)" />

            <TextView
                android:id="@+id/lbl_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/details"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/registration" />

            <FrameLayout
                android:id="@+id/_type_of_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/card_bg"
                android:minHeight="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_details">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/type_of_business"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/type_of_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:textSize="14sp"
                    tools:text="Web Development" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/_no_of_employees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_bg"
                android:minHeight="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/_type_of_business">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_of_employees"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/no_of_employees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:textSize="14sp"
                    tools:text="Information Technology" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_bg"
                android:minHeight="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/_no_of_employees">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/country"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/country_flag"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/layout_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/country"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_earth" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Kuwait" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lbl_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/bio"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/_country" />

            <LinearLayout
                android:id="@+id/_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/card_bg"
                android:minHeight="40dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_bio">

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textSize="14sp"
                    tools:text="Lorem ipsum dolor sit amet, consetetur sadipsg elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." />

                <TextView
                    android:id="@+id/read_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/read_more"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_recent_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recent_jobs"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/_bio" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_recent_jobs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>